Restructure to support exporting Grunt tasks

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "node": ">=0.10.1"
   },
   "dependencies": {
-    "fs-extra": "*"
+    "fs-extra": "*",
+    "async": "*",
+    "archiver": "*"
   }
 }
