--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "http://davidherron.com"
   },
   "name": "akashacms-epub",
-  "description": "A plugin for AkashaCMS to build EPUB files",
+  "description": "AkashaEPUB: A plugin for AkashaCMS to build EPUB files",
   "homepage": "http://akashacms.com/plugins/epub.html",
   "repository": {
     "type": "git",
@@ -16,8 +16,10 @@
     "node": ">=0.10.1"
   },
   "dependencies": {
+    "node-uuid": "*",
     "fs-extra": "*",
     "async": "*",
-    "archiver": "*"
+    "archiver": "*",
+    "ejs": "*"
   }
 }
