--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "url": "http://davidherron.com"
   },
   "name": "akashacms-epub",
-  "description": "AkashaEPUB: A plugin for AkashaCMS to build EPUB files",
+  "description": "AkashaEPUB: A plugin for AkashaCMS to build EPUB3 files",
   "homepage": "http://akashacms.com/plugins/epub.html",
   "repository": {
     "type": "git",
     "url": "git://github.com/akashacms/akashacms-epub.git"
   },
-  "version": "0.4.9",
+  "keywords": [
+      "epub", "epub3", "markdown", "ebook", "epub3 generator", "epub generator", "ebook generator"
+  ],
+  "version": "0.4.10",
   "engines": {
     "node": ">=0.10.1"
   },
